# moqinfer

./: .gitignore  .gitmodules  CLAUDE.md  README.md  benchmark.py  pyproject.toml  test_e2e.py  test_multi_backend_e2e.py  test_multi_user_e2e.py  test_real_llm_tool_call.py  test_relay_e2e.py  test_tool_call_e2e.py
moq-py/: Cargo.toml  pyproject.toml
moq-py/src/: broadcast.rs  client.rs  error.rs  group.rs  lib.rs  origin.rs  server.rs  track.rs
moqinfer/: __init__.py  backend.py  client.py  inference.py  metrics.py  rest_backend.py  rest_server.py  server.py
scripts/: relay.sh  run.sh
