[project]
name = "moqinfer"
version = "0.1.0"
description = "MoQ-native LLM inference server using vLLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "vllm-metal",
]

[project.scripts]
moqinfer = "moqinfer.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["moqinfer*"]
